<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016-2025 Álinson Santos Xavier <git@axavier.org>
  ~
  ~ This file is part of Loop Habit Tracker.
  ~
  ~ Loop Habit Tracker is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by the
  ~ Free Software Foundation, either version 3 of the License, or (at your
  ~ option) any later version.
  ~
  ~ Loop Habit Tracker is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
  ~ more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/actionAddHabit"
        android:icon="@drawable/ic_toolbar_add"
        android:title="@string/create_habit"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionSync"
        android:icon="@drawable/ic_toolbar_refresh"
        android:title="@string/sync_now"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionSkipDay"
        android:icon="@drawable/ic_toolbar_skip_day"
        android:title="@string/action_skip_day"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_toolbar_sort_descending"
        android:title="@string/filter"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/actionHideArchived"
                android:checkable="true"
                android:enabled="true"
                android:title="@string/hide_archived"/>

            <item
                android:id="@+id/actionHideCompleted"
                android:checkable="true"
                android:enabled="true"
                android:title="@string/hide_completed"/>

            <item android:title="@string/sort">
                <menu>
                    <item
                        android:id="@+id/actionSortManual"
                        android:title="@string/manually"/>

                    <item
                        android:id="@+id/actionSortName"
                        android:title="@string/by_name"/>

                    <item
                        android:id="@+id/actionSortColor"
                        android:title="@string/by_color"/>

                    <item
                        android:id="@+id/actionSortScore"
                        android:title="@string/by_score"/>

                    <item
                        android:id="@+id/actionSortStatus"
                        android:title="@string/by_status"/>

                    <item
                        android:id="@+id/actionSortSphere"
                        android:title="@string/by_sphere"/>

                    <item
                        android:id="@+id/actionSortLevel"
                        android:title="@string/by_level"/>
                </menu>
            </item>
        </menu>
    </item>

</menu>
