<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016-2025 Álinson Santos Xavier <git@axavier.org>
  ~
  ~ This file is part of Loop Habit Tracker.
  ~
  ~ Loop Habit Tracker is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by the
  ~ Free Software Foundation, either version 3 of the License, or (at your
  ~ option) any later version.
  ~
  ~ Loop Habit Tracker is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
  ~ more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit_habit"
        android:icon="?iconEdit"
        android:title="@string/edit"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_more_habit"
        android:icon="@drawable/ic_toolbar_more_vertical"
        android:title="@string/today_show_more"
        app:iconTint="@color/white"
        app:showAsAction="always"/>

    <item android:id="@+id/export" android:title="@string/export" android:visible="false" />
    <item android:id="@+id/action_archive_habit" android:title="@string/archive" android:visible="false" />
    <item android:id="@+id/action_unarchive_habit" android:title="@string/unarchive" android:visible="false" />
    <item android:id="@+id/action_soft_reset_statistics" android:title="@string/start_statistics_over" android:visible="false" />
    <item android:id="@+id/action_hard_reset_statistics" android:title="@string/reset_statistics" android:visible="false" />
    <item android:id="@+id/action_delete" android:title="@string/delete" android:visible="false" />
    <item android:id="@+id/action_randomize" android:title="Randomize" android:visible="false" />

</menu>
